homebridge/30-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  namespace: homebridge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: homebridge
        image: homebridge/homebridge:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: ui
          containerPort: 8581
        - name: homekit
          containerPort: 51826
        volumeMounts:
        - name: homebridge-data
          mountPath: /homebridge
        readinessProbe:
          httpGet:
            path: /
            port: 8581
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8581
          initialDelaySeconds: 60
          periodSeconds: 30
      volumes:
      - name: homebridge-data
        persistentVolumeClaim:
          claimName: homebridge-data
      - name: homebridge-default-config
        configMap:
          name: homebridge-default-config
