homebridge/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
spec:
  selector:
    app: homebridge
  ports:
  - name: ui
    port: 80
    targetPort: 8581
