homebridge/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge
  namespace: homebridge
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - homebridge.home.the-hoffmanns.org
    secretName: homebridge-subdomain-tls
  rules:
  - host: homebridge.home.the-hoffmanns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homebridge
            port:
              number: 80
